--- a/config/logging/config.yml
+++ b/config/logging/config.yml
@@ -13,6 +13,11 @@ default:
       filename: idstools.log
       level: DEBUG
       formatter: simple
+    resultfile_handler:
+      class: logging.FileHandler
+      filename: results.log
+      level: DEBUG
+      formatter: simple
   loggers:
     idstools:
       level: DEBUG
@@ -41,6 +46,10 @@ default:
     tqdm:
       level: INFO
       handlers: [file_handler, console_handler]
+      propagate: False
+    results:
+      level: INFO
+      handlers: [resultfile_handler]
       propagate: False
     root:
       level: INFO
