--- a/config/idstools/BikeRentalDaily_config.yml
+++ b/config/idstools/BikeRentalDaily_config.yml
@@ -1,7 +1,18 @@
 default:
-MYTRANSFORMER:
-  - func: target_to_datetime
-    module: idstools._custom_transformer
-    config:
-      target: dteday
-      format: "%d.%m.%Y"
+
+task1:
+  _idstools_data:
+    TargetData:
+      input_path: "data/BikeRentalDaily_train.csv"
+      input_delimiter: ";"
+      index: "instant"
+      label: "cnt"
+
+  data_preparation:
+    DataPreparation:
+      pipeline:
+        - func: target_to_datetime
+          module: idstools._custom_transformer
+          config:
+            target: dteday
+            format: "%d.%m.%Y"
