--- a/config/idstools/BikeRentalDaily_config.yaml
+++ b/config/idstools/BikeRentalDaily_config.yaml
@@ -38,7 +38,49 @@ Task1:
         pipeline:
           time_series_analysis: true
 
-Task2:  
+Task2:
+
+  Drop_NaN_Rows:
+  season
+  hum
+  Model_Validation:
+
+  Impute_NaN_Values_Mean:
+  season -> custom(impute by dteday)
+  hum -> mean
+  Model_Validation:
+
+  Impute_NaN_Values_Median:
+  hum -> median
+  Model_Validation:
+
+  Data_Corrections:
+  windspeed -> custom(all values < 0 to NaN)
+
+  Drop_NaN_Rows:
+  windspeed
+  Model_Validation:
+
+  Impute_NaN_Values_Mean:
+  windspeed -> mean
+  Model_Validation:
+
+  Impute_NaN_Values_Median:
+  windspeed -> median
+  Model_Validation:
+
+  Remove_Outlier:
+  hum?
+  Model_Validation:
+
+  One_Hot_Encoding:
+  season?
+  weekday?
+  weathersit?
+  Model_Validation:
+
+
+
   01_Baseline_Regression_Preprocessing:
     data_preparation:
       DataPreparation:
